2007-03-26  John W. Eaton  <jwe@octave.org>

	* chNDArray.cc, chMatrix.cc: Also generate comparison and bool ops.
	* chNDArray.h, chMatrix.h: Provide decls.

2007-03-24  Luis Ortiz  <lortiz@interactivesupercomputing.com>

	* MatrixType.cc (MatrixType::MatrixType (void)): Initialize
	sp_bandden to zero for performance reasons as it's not used.

2007-03-23  David Bateman  <dbateman@free.fr>

	* oct-rand.cc (octave_rand::seed): Seed differently for big and
	little endian.

2007-03-15  John W. Eaton  <jwe@octave.org>

	* lo-mappers.cc (acos): Use formula similar to what we use for asin.
	From Alexander Barth <abarth@marine.usf.edu>.

2007-03-12  John W. Eaton  <jwe@octave.org>

	* oct-inttypes.h (octave_int::octave_int (double)):
	New Specialization.  Round arg.
	(operator / (const octave_int<T1>&, const octave_int<T2>&)):
	Round result before converting type.

2007-03-07  John W. Eaton  <jwe@octave.org>

	* Array.cc (assign1): Avoid resizing if there is an error.

	* dMatrix.cc, CMatrix.cc (operator *): Only check
	f77_exception_encountered immediately after calls that use F77_XFCN.

	* Array.cc (assign1 (Array<LT>&, const Array<RT>&, const LT&)):
	Only allow resizing empty LHS if it is 0x0.

	* Array.cc (Array<T>::maybe_delete_elements (Array<idx_vector>&,
	const T&)): Handle case of more indices than dimensions.
	(assign (Array<LT>&, const Array<RT>&, const LT&)): Allow more
	cases to be handled by assignN.
	(assignN (Array<LT>&, const Array<RT>&, const LT&)):
	Special cases for 2-d array assignments for speed.
	Improve handling of scalar RHS and empty indices.

2007-03-05  David Bateman  <dbateman@free.fr>

	* oct-md5.c (oct_md5_file (const std::string&)): New function.
	* oct-md5.h (oct_md5_file (const std::string&)): Declare it.

2007-03-02  John W. Eaton  <jwe@octave.org>

	* str-vec.h (string_vector::empty): Return bool, not int.

2007-03-01  David Bateman  <dbateman@free.fr>

        * md5.h, md5.c: New files from libmd5-rfc sourceforge project for